lab_04: add friend and post, mockDb. refactoring
