# src/main/resources/spec/openApi.yaml
@@ -1,9 +1,9 @@
 openapi: 3.0.1
 info:
   title: OTUS high-load project
-  version: 0.0.1
+  version: 0.0.4
 servers:
-  - url: http://localhost:8080
+  - url: http://127.0.0.1:8080
     description: Generated server url
 tags:
   - name: Actuator
@@ -12,6 +12,124 @@ tags:
       description: Spring Boot Actuator Web API Documentation
       url: https://docs.spring.io/spring-boot/docs/current/actuator-api/html/
 paths:
+  /post:
+    put:
+      tags:
+        - post-controller
+      summary: Update post
+      description: Update post
+      operationId: updatePost
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Post'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+    post:
+      tags:
+        - post-controller
+      summary: Create post
+      description: Create new post
+      operationId: createNewPost
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Post'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+  /friend/{friendId}:
+    put:
+      tags:
+        - friend-controller
+      summary: Set friend
+      description: Set new friend
+      operationId: addFriend
+      parameters:
+        - name: friendId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+    delete:
+      tags:
+        - friend-controller
+      summary: Delete friend
+      description: Delete friend by id
+      operationId: deleteFriendById_1
+      parameters:
+        - name: friendId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
   /user/register:
     post:
       tags:
@@ -58,6 +176,39 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AuthenticationDtoResponse'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+  /user/search:
+    get:
+      tags:
+        - user-controller
+      summary: Search users by first/last name
+      description: Search users by first and last name
+      operationId: searchUsers
+      parameters:
+        - name: firstName
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: lastName
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
         '400':
           description: Bad Request
           content:
@@ -112,6 +263,107 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+  /post/{id}:
+    get:
+      tags:
+        - post-controller
+      summary: Get post
+      description: Get post by id
+      operationId: getPostById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Post'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+    delete:
+      tags:
+        - post-controller
+      summary: Delete post
+      description: Delete post by id
+      operationId: deleteFriendById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+  /post/feed:
+    get:
+      tags:
+        - post-controller
+      summary: Feed post
+      description: Get posts of friends
+      operationId: feedPost
+      parameters:
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 0
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
+            default: 10
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
         '400':
           description: Bad Request
           content:
@@ -207,6 +459,20 @@ paths:
                 type: object
 components:
   schemas:
+    Post:
+      required:
+        - text
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        text:
+          type: string
+        authorId:
+          type: integer
+          format: int32
+      description: Post of user
     City:
       required:
         - name
@@ -216,39 +482,43 @@ components:
           type: string
     Hobby:
       required:
+        - id
         - name
       type: object
       properties:
+        id:
+          type: integer
+          format: int32
         name:
           type: string
         description:
           type: string
     User:
       required:
-        - UserAge
-        - UserFirstName
-        - UserGender
-        - UserSecondName
+        - age
+        - firstName
+        - gender
+        - lastName
       type: object
       properties:
-        UserId:
+        id:
           type: integer
           format: int32
-        UserFirstName:
+        firstName:
           type: string
-        UserSecondName:
+        lastName:
           type: string
-        UserAge:
+        age:
           type: integer
           format: int32
-        UserGender:
+        gender:
           type: string
           enum:
             - MALE
             - FEMALE
-        City:
+        city:
           $ref: '#/components/schemas/City'
-        Hobbies:
+        hobbies:
           type: array
           items:
             $ref: '#/components/schemas/Hobby'
@@ -269,25 +539,27 @@ components:
       description: User registration request
     UserAuthenticationRequest:
       required:
-        - UserLogin
-        - UserPassword
+        - login
+        - pass
       type: object
       properties:
-        UserLogin:
+        login:
           type: string
-        UserPassword:
+        pass:
           type: string
       description: User authentication request
     AuthenticationDtoResponse:
       required:
-        - BearerToken
-        - TokenLifetime
+        - token
+        - tokenExpired
       type: object
       properties:
-        BearerToken:
+        token:
           type: string
-        TokenLifetime:
+          description: Bearer token
+        tokenExpired:
           type: string
+          description: Expired data
           format: date
     Link:
       type: object
